fixed the extra white space

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@
 body {
   font-size: 62.5%;
   font-family: "Roboto", sans-serif;
-  overflow-x: hidden;
 }
 
 ul {
@@ -44,6 +43,11 @@ a {
   max-width: 1080px;
   margin: 0 auto;
   padding: 0 25px;
+}
+
+.hidden {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .btn {
@@ -906,8 +910,9 @@ footer .row {
   height: 3rem;
   width: 3rem;
   position: fixed;
-  top: 3rem;
-  right: 2rem;
+  top: 2rem;
+  /* right: 2rem; */
+  right: 0.5rem;
   border-radius: 50%;
   z-index: 200;
   box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
@@ -920,8 +925,9 @@ footer .row {
   width: 2rem;
   border-radius: 50%;
   position: fixed;
-  top: 3rem;
-  right: 2.5rem;
+  top: 2rem;
+  /* right: 2.5rem; */
+  right: 1rem;
   background-image: radial-gradient(#7ed56f, #28b485);
   z-index: 100;
   transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
@@ -1109,13 +1115,16 @@ footer .row {
 @media only screen and (max-width: 48em) {
   /* 768px / 16px = 48em */
   /* Header */
+
   .navbar li a {
-    padding: 0 3.5rem 0.8rem 0.5rem;
+    /* font-size: 0.7rem; */
+    padding: 0.5rem;
   }
 
   .navbar li .bx-search,
   .navbar li .bx-cart {
     display: inline-block;
+    /* font-size: 0.7rem; */
     padding: 0.3rem;
   }
 
@@ -1144,7 +1153,7 @@ footer .row {
   }
 
   .vegetables-txt h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     padding: 2.5rem 0;
   }
 
@@ -1162,33 +1171,35 @@ footer .row {
   }
 
   /* Quality Product */
-
   .reverse .row {
-    justify-items: center;
+    justify-content: center;
     flex-wrap: nowrap;
   }
-
-  .side-txt h2 {
-    font-size: 1.5rem;
-    padding: 0 0 0.5rem;
-  }
-
-  .side-txt p {
-    font-size: 0.7rem;
-    padding-bottom: 0.5rem;
-  }
-
   .reverse .col-2 {
-    min-width: 320px;
+    min-width: 350px;
   }
   .reverse .col2-img {
-    height: 270px;
-    /* padding-left: 5.5rem; */
+    height: 250px;
+    padding-left: 5.5rem;
   }
 
   .reverse .col-2 img {
     height: 100%;
     object-fit: cover;
+  }
+  .side-txt h2 {
+    font-size: 1rem;
+    padding-bottom: 0.5rem;
+  }
+  .side-txt p {
+    min-width: 350px;
+    font-size: 0.77rem;
+    padding-right: 9rem;
+    padding-bottom: 0.5rem;
+  }
+  .sub-side i {
+    font-size: 1.5rem;
+    margin-right: 0.2rem;
   }
 
   /* Testimonial */
@@ -1257,37 +1268,6 @@ footer .row {
     padding: 2.5rem 0;
   }
 
-  /* Quality Product */
-  .reverse .row {
-    justify-content: center;
-  }
-  .reverse .col-2 {
-    min-width: 350px;
-  }
-  .reverse .col2-img {
-    height: 250px;
-    padding-left: 5.5rem;
-  }
-
-  .reverse .col-2 img {
-    height: 100%;
-    object-fit: cover;
-  }
-  .side-txt h2 {
-    font-size: 1rem;
-    padding-bottom: 0.5rem;
-  }
-  .side-txt p {
-    min-width: 350px;
-    font-size: 0.77rem;
-    padding-right: 9rem;
-    padding-bottom: 0.5rem;
-  }
-  .sub-side i {
-    font-size: 1.5rem;
-    margin-right: 0.2rem;
-  }
-
   /* News & Articles */
   .article {
     padding: 5rem 0 0;
@@ -1341,6 +1321,7 @@ footer .row {
   }
 
   .navbar li a {
+    font-size: 0.9rem;
     padding: 0.5rem 0.4rem 0.1rem 0;
   }
 
@@ -1412,6 +1393,30 @@ footer .row {
   .footer-news {
     flex-basis: 25%;
     min-width: 200px;
+  }
+}
+
+@media only screen and (max-width: 25em) {
+  /* 400px / 16px = 25em */
+  .navbar li a {
+    font-size: 0.7rem;
+    padding: 0.5rem 0.4rem 0.1rem 0;
+  }
+
+  .navbar li .bx-search,
+  .navbar li .bx-cart {
+    font-size: 0.7rem;
+    padding: 0.1rem;
+  }
+
+  .hero-txt {
+    padding: 7rem 0 0 1rem;
+    /* font-size: 1rem; */
+  }
+
+  .vegetables-txt h2 {
+    font-size: 1.5rem;
+    padding: 2rem 0;
   }
 }
 
